# axum_router_helper

./: Cargo.toml  README.md
.github/workflows/: rust.yml
axum-rh/: .gitignore  Cargo.toml  README.md
axum-rh/exemples/: Cargo.toml
axum-rh/exemples/src/: main.rs  routes.rs
axum-rh/exemples/src/routes/: health.rs  samples.rs
axum-rh/src/: router.rs
axum-rh/src/router/: logger.rs  middlewares.rs  traits.rs  utils.rs
axum-rh/src/router/middlewares/: auth.rs  logging.rs  sessions.rs
axum-rh/src/router/models/: api_response.rs  endpoint.rs  response_body.rs
axum-rh/src/router/traits/: api_router.rs  router_helper.rs
axum-rh/src/router/utils/: auth.rs  session_manager.rs
exemples/: Cargo.toml
exemples/src/: main.rs  routes.rs
exemples/src/routes/: health.rs  samples.rs
macros/: Cargo.toml
macros/src/: impls.rs  lib.rs
macros/src/models/: endpoint_attr.rs  router_attr.rs
src/: lib.rs  router.rs
src/router/: logger.rs  models.rs
src/router/macros/: Cargo.toml
src/router/macros/src/: impls.rs  lib.rs  models.rs
src/router/macros/src/models/: endpoint_attr.rs  router_attr.rs  router_config.rs
src/router/middlewares/: auth.rs  logging.rs  sessions.rs
src/router/models/: api_response.rs
src/router/utils/: auth.rs  session_manager.rs
