[package]
name = "axum-rh"
version = "0.1.6"
edition = "2021"
description = "A helper library for the axum router"
license = "MIT"
repository = "https://github.com/AlexandreBarbier/axum_router_helper/axum-rh"

[features]
default = ["base"]
full = ["base"]
models = ["serde"]
base = [
    "models",
    "arh-macros",
    "chrono",
    "log",
    "axum",
    "tower-sessions",
    "time",
    "tower-sessions-redis-store",
    "bcrypt",
    "tokio",
    "jsonwebtoken",
]

[dependencies]
chrono = { version = "0.4.40", optional = true }
serde = { version = "1.0.219", features = ["derive"], optional = true }
log = { workspace = true, features = ["kv"], optional = true }
tokio = { version = "1.44.1", features = ["full"], optional = true }
axum = { workspace = true, features = ["default", "macros"], optional = true }
tower-sessions = { version = "0.14.0", optional = true }
time = { version = "0.3.40", optional = true }
tower-sessions-redis-store = { version = "0.16.0", optional = true }
bcrypt = { version = "0.17.0", optional = true }
jsonwebtoken = { version = "9.3.1", optional = true }
arh-macros = { path = "../macros", version = "0.1.3", optional = true }
cfg-if = "1.0.0"
env_logger = "0.11.7"
