[package]
name = "axum-rh"
version = "0.2.7"
edition = "2021"
description = "A helper library for the axum router"
license = "MIT"
repository = "https://github.com/AlexandreBarbier/axum_router_helper/axum-rh"

[features]
default = ["base"]
full = ["base"]
models = ["serde"]
base = [
    "arh-macros",
    "axum",
    "bcrypt",
    "chrono",
    "jsonwebtoken",
    "log",
    "models",
    "rmp-serde",
    "serde_json",
    "time",
    "tokio",
    "tower-sessions",
    "tower-sessions-redis-store",
    "ureq",
]

[dependencies]
chrono = { version = "0.4.41", optional = true }
serde = { version = "1.0.219", features = ["derive"], optional = true }
log = { workspace = true, features = ["kv"], optional = true }
tokio = { version = "1.47.0", features = ["full"], optional = true }
axum = { workspace = true, features = ["default", "macros"], optional = true }
tower-sessions = { version = "0.14.0", optional = true }
time = { version = "0.3.41", optional = true }
tower-sessions-redis-store = { version = "0.16.0", optional = true }
bcrypt = { version = "0.17.0", optional = true }
jsonwebtoken = { version = "9.3.1", optional = true }
arh-macros = { path = "../macros", version = "0.1.8", optional = true }
cfg-if = "1.0.1"
env_logger = "0.11.8"
ureq = { version = "3.0.12", optional = true }
rmp-serde = { version = "1.3.0", optional = true }
serde_json = { version = "1.0.141", optional = true }
