[package]
name = "arh-macros"
version = "0.1.6"
edition = "2021"
description = "Macros for axum-router-helper"
license = "MIT"
repository = "https://github.com/AlexandreBarbier/axum_router_helper/macros"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.104", features = ["full"] }
log = { workspace = true, features = ["kv"] }
axum = { workspace = true, features = ["default", "ws", "macros"] }
