[package]
name = "arh-macros"
version = "0.1.2"
edition = "2021"
description = "Macros for axum-router-helper"
license = "MIT"
repository = "https://github.com/AlexandreBarbier/axum_router_helper/src/router/macros"
[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.93"
quote = "1.0.38"
syn = { version = "2.0.98", features = ["full"] }
log = { version = "0.4.26", features = ["kv"] }
axum = { version = "0.8.1", features = ["default", "ws", "macros"] }
